@@ -36,6 +36,7 @@ The following bugs are resolved with this release:
   [28704] elf/tst-cpu-features-cpuinfo fails for KVM guests on some AMD systems
   [28707] assert in tzfile.c __tzfile_read striking with truncated timezones
   [28744] A64FX string functions are selected without SVE HWCAP
+  [28771] %ebx optimization macros are incompatible with .altmacro
 
 
 Version 2.34
